# dacoromanica_downloader

./: .gitignore  README.md  download_pdf.py  get_collection_info.py  get_collection_year.py  get_next_page.py  get_soup.py  main.py  pyproject.toml  requirements.txt  starting_urls.txt  switch_start_page_view.py
.github/workflows/: build_and_test_on_Ubuntu.yml  build_and_test_on_Windows.yml  main.yml
downloaded_files/: README.md
src/dacoromanica_downloader/: download_pdf.py  get_starting_urls.py  main.py  model.py  scrape.py
tests/: conftest.py
tests/end-to-end/: test_end_to_end_main.py  test_main.py
tests/integration/: test_download_collection_pdf.py
tests/test_data/: test_get_collection_info.html  test_get_collection_year.html  test_get_link_for_table_view.html  test_get_next_page_url.html  test_page.html
tests/test_data/test_data_main/: collection_details_page1.html  collection_details_page2.html  collection_details_page3.html  collection_details_page4.html  collection_details_page5.html  collection_details_page6.html  collections_page1.html  collections_page2.html  collections_page3.html  collections_page4.html  table_view_collections1.html  table_view_collections2.html  table_view_collections3.html  table_view_collections4.html  table_view_collections5.html
tests/unit/: test_download_pdf.py  test_get_starting_urls.py  test_main.py  test_model.py  test_scrape.py
